# setup-cfg-example

./: setup.cfg
