[metadata]
name = setup-cfg-example
version = 0.0.1
author = Sam Morris
author_email = sam@robots.org.uk
description = Mininmal package to demonstrate use of static setup.cfg
url = https://github.com/yrro/setup-cfg-example

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
